--- a/src/components/HomeClient.module.css
+++ b/src/components/HomeClient.module.css
@@ -876,6 +876,6 @@
     margin-top: 5vh !important;
   }
   .problemSection {
-    gap: 10vh !important;
+    gap: 7vh !important;
   }
 }
